<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.diva.pimpaddokter.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.diva.pimpaddokter.ui.listchat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat"/>

    <fragment
        android:id="@+id/navigation_result_detect_user"
        android:name="com.diva.pimpaddokter.ui.resultdetectuser.ResultDetectUserFragment"
        android:label="@string/title_result"
        tools:layout="@layout/fragment_result_detect_user"/>
</navigation>