<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.resultdetectuser.DetailResultDetectUserActivity">

    <TextView
        android:id="@+id/username_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/nama_pengguna"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_result_detail_iv" />

    <TextView
        android:id="@+id/timestamp_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waktu_deteksi"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_detail" />

    <!--    <TextView-->
    <!--        android:id="@+id/delete_tv"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/delete"-->
    <!--        android:layout_marginEnd="16dp"-->
    <!--        android:textAlignment="center"-->
    <!--        android:textColor="@color/delete"-->

    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/delete_detail_btn" />-->

    <TextView
        android:id="@+id/username_detail_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"

        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/username_detail"
        app:layout_constraintTop_toBottomOf="@+id/image_result_detail_iv"
        tools:text="Jajang" />

    <TextView
        android:id="@+id/timestamp_detail_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/username_detail"
        app:layout_constraintTop_toBottomOf="@+id/username_detail_tv"
        tools:text="28-06-2023" />

    <ImageView
        android:id="@+id/image_result_detail_iv"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:maxWidth="300dp"
        android:maxHeight="300dp"
        android:transitionName="image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/result_name_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_jenis"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timestamp_detail" />

    <TextView
        android:id="@+id/result_detect_detail_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:transitionName="name"
        app:layout_constraintStart_toEndOf="@+id/username_detail"
        app:layout_constraintTop_toBottomOf="@+id/timestamp_detail_tv"
        tools:text="Blackheads" />

    <!--    <TextView-->
<!--        android:id="@+id/keterangan_detail_tv"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:text="@string/keterangan_result_detail"-->
<!--        android:textSize="12sp"-->
<!--        android:textStyle="italic"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/result_detect_detail_tv" />-->

</androidx.constraintlayout.widget.ConstraintLayout>